Minor cleanup - headed for depreciation

--- a/notebooks/PNW_Offshore_TestDataset.ipynb
+++ b/notebooks/PNW_Offshore_TestDataset.ipynb
@@ -39,17 +39,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define PNSN reporting boundary\n",
-    "rlatll, rlonll = 41., -129.\n",
-    "rlatur, rlonur = 51., -116.\n",
+    "# # Define PNSN reporting boundary\n",
+    "# rlatll, rlonll = 41., -129.\n",
+    "# rlatur, rlonur = 51., -116.\n",
     "\n",
-    "# Define PNSN authoratative boundary (plus a little slop)\n",
-    "alatll, alonll = 42., -125.5\n",
-    "alatur, alonur = 49., -117.\n",
+    "# # Define PNSN authoratative boundary (plus a little slop)\n",
+    "# alatll, alonll = 42., -125.5\n",
+    "# alatur, alonur = 49., -117.\n",
     "\n",
     "# Define Coastal WA/OR Search Box\n",
-    "slatll, slonll = 42., -125.5\n",
-    "slatur, slonur = 49., -122."
+    "latll, lonll = 42., -125.5\n",
+    "latur, lonur = 49., -122."
    ]
   },
   {
@@ -58,14 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define search filters\n",
-    "filt_kwargs = {'minmag': 1,\n",
-    "               'maxmag': 8,\n",
-    "               'starttime': UTCDateTime(2015,1,1),\n",
-    "               'endtime': UTCDateTime(2023,11,17),\n",
-    "               'latmin': slatll,\n",
-    "               'lonmin': slonll,\n",
-    "               ''}\n"
+    "# Initalize ObsPy Client\n",
+    "client = Client(\"IRIS\")"
    ]
   },
   {
