Start preprocessing pipeline example block

--- a/notebooks/Feature_Extraction_Pipeline_Example.ipynb
+++ b/notebooks/Feature_Extraction_Pipeline_Example.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,14 @@
     "import plotly.express as px\n",
     "from obspy import read, UTCDateTime, Stream\n",
     "from obspy.clients.fdsn import Client\n",
+    "from obspy.io.sac.saczp import _write_sacpz\n",
     "from functions.pb_utils_v16 import st_FV\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -113023,7 +113024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114258,38 +114259,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "holder = []\n",
-    "pp_padding = 1.\n",
+    "pp_padding = 1.0\n",
     "for _I in range(len(df2)):\n",
     "    # Subset arrival line as a series\n",
-    "    _series = df2.iloc[_I,:]\n",
+    "    _series = df2.iloc[_I, :]\n",
     "    # Get Network and Station Code\n",
-    "    gwfk = dict(zip(['network','station'], _series[['net','sta']].values))\n",
+    "    gwfk = dict(zip([\"network\", \"station\"], _series[[\"net\", \"sta\"]].values))\n",
     "    # Handle location formatting differences between AQMS and ObsPy\n",
-    "    if _series.location == '  ':\n",
-    "        gwfk.update({'location':''})\n",
+    "    if _series.location == \"  \":\n",
+    "        gwfk.update({\"location\": \"\"})\n",
     "    else:\n",
-    "        gwfk.update({'location': _series.location})\n",
+    "        gwfk.update({\"location\": _series.location})\n",
     "    # Get channel code with component wildcard `?`\n",
-    "    gwfk.update({'channel':_series.seedchan[:2]+'?'})\n",
+    "    gwfk.update({\"channel\": _series.seedchan[:2] + \"?\"})\n",
     "\n",
     "    # Get time bounds (start with 7 sec lead, 3 sec lag per Lana et al., 2023)\n",
     "    tarr = UTCDateTime(_series.arrdatetime.isoformat())\n",
-    "    gwfk.update({'starttime': tarr - 7 - pp_padding})\n",
-    "    gwfk.update({'endtime': tarr + 3 + pp_padding})\n",
+    "    gwfk.update({\"starttime\": tarr - 7 - pp_padding})\n",
+    "    gwfk.update({\"endtime\": tarr + 3 + pp_padding})\n",
     "\n",
     "    # We will be removing instrument response, so attach instrument RESP with query\n",
-    "    gwfk.update({'attach_response': True})\n",
+    "    gwfk.update({\"attach_response\": True})\n",
     "\n",
     "    ## RUN ACTUAL WAVEFORM QUERY ##\n",
     "    st = client.get_waveforms(**gwfk)\n",
     "    # Order stream as ENZ\n",
     "    st = st.sort()\n",
     "    # Conduct preprocessing\n",
+    "    # MAKE 2 VERSIONS OF THE TRACE\n",
+    "    # 1) DO EXACTLY THE SAME PREOCESSING\n",
+    "    st_L23 = st.copy()\n",
+    "    # write PAZ file to temp to facilitate exact processing workflow\n",
+    "    _tmp_PAZ_file = os.path.join(\".\", \"_tmp.pz\")\n",
+    "    _write_sacpz(\n",
+    "        st_L23[0].stats.response,\n",
+    "        _tmp_PAZ_file\n",
+    "    )\n",
+    "    FV_op = st_FV(\n",
+    "        st_L23, _tmp_\n",
+    "    )\n",
+    "    # 2) test alternative processing workflow\n",
+    "    st_E23 = st.copy()\n",
     "    # - detrend: 1st order polynomial\n",
     "    # - taper\n",
     "    # - filter\n",
@@ -114303,37 +114318,65 @@
     "    # Pass preprocessed stream to feature extraction\n",
     "    # - Extract rectilinearity features\n",
     "    # - write 3C features to holder\n",
-    "        # For each channel\n",
-    "        # - extract temporal features\n",
-    "        # - extract spectral features\n",
-    "        # - extract cepstral features\n",
-    "        # - write 1C features to holer\n",
+    "    # For each channel\n",
+    "    # - extract temporal features\n",
+    "    # - extract spectral features\n",
+    "    # - extract cepstral features\n",
+    "    # - write 1C features to holer\n",
     "\n",
-    "# append contents of holder to df2\n",
-    "    \n"
+    "# append contents of holder to df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3 Trace(s) in Stream:\n",
-       "UO.RAIN..HHE | 2017-07-01T08:04:13.238393Z - 2017-07-01T08:04:25.228393Z | 100.0 Hz, 1200 samples\n",
-       "UO.RAIN..HHN | 2017-07-01T08:04:13.238393Z - 2017-07-01T08:04:25.228393Z | 100.0 Hz, 1200 samples\n",
-       "UO.RAIN..HHZ | 2017-07-01T08:04:13.238393Z - 2017-07-01T08:04:25.228393Z | 100.0 Hz, 1200 samples"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mSignature:\u001b[0m \u001b[0m_tr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mattach_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minventories\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "Search for and attach channel response to the trace as\n",
+      ":class:`obspy.core.trace.Trace`.stats.response. Raises an exception\n",
+      "if no matching response can be found.\n",
+      "To subsequently deconvolve the instrument response use\n",
+      ":meth:`obspy.core.trace.Trace.remove_response`.\n",
+      "\n",
+      ">>> from obspy import read, read_inventory\n",
+      ">>> st = read()\n",
+      ">>> tr = st[0]\n",
+      ">>> inv = read_inventory()\n",
+      ">>> tr.attach_response(inv)\n",
+      ">>> print(tr.stats.response)                  # doctest: +ELLIPSIS +NORMALIZE_WHITESPACE\n",
+      "Channel Response\n",
+      "   From M/S (Velocity in Meters per Second) to COUNTS (Digital Counts)\n",
+      "   Overall Sensitivity: 2.5168e+09 defined at 0.020 Hz\n",
+      "   4 stages:\n",
+      "      Stage 1: PolesZerosResponseStage from M/S to V, gain: 1500\n",
+      "      Stage 2: CoefficientsTypeResponseStage from V to COUNTS, ...\n",
+      "      Stage 3: FIRResponseStage from COUNTS to COUNTS, gain: 1\n",
+      "      Stage 4: FIRResponseStage from COUNTS to COUNTS, gain: 1\n",
+      "\n",
+      ":type inventories: :class:`~obspy.core.inventory.inventory.Inventory`\n",
+      "    or :class:`~obspy.core.inventory.network.Network` or a list\n",
+      "    containing objects of these types or a string with a filename of\n",
+      "    a StationXML file.\n",
+      ":param inventories: Station metadata to use in search for response for\n",
+      "    each trace in the stream.\n",
+      "\u001b[0;31mFile:\u001b[0m      ~/miniconda3/envs/E3WS/lib/python3.8/site-packages/obspy/core/trace.py\n",
+      "\u001b[0;31mType:\u001b[0m      method"
+     ]
     }
    ],
    "source": [
-    "# Try out some visualization??"
+    "st[0].stats\n",
+    "RESP = st[0].stats.response\n",
+    "sacpaz = RESP.get_sacpz()\n",
+    "_tr = st[0]\n",
+    "from obspy.io.sac.sacpz import _write_sacpz\n",
+    "attach_paz(_tr, )"
    ]
   }
  ],
